--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="calc.js"></script>
-    <title>Document</title>
+    <script src="calc.js" defer></script>
+    <title>Calculator</title>
 </head>
 <body>
     <div class="calculator-body">
         <div class="display">
-            <div class="real-time-display">3 + 5</div>
-            <div class="result-display">8</div>
+            <div class="real-time-display" id="real-time-display">
+                <div id="first-number-display"></div>
+                <div id="operand-display"></div>
+                <div id="second-number-display"></div>
+            </div>
+            <div class="result-display" id="result-display"></div>
         </div>
         <div class="buttons-container">
             <button class="special" id="clear">AC</button>
